# courtroom

./: .env.example  .gitignore  README.md  astra_connection.py  case_detail.md  index.html  main.py  package-lock.json  package.json  presentation.md  pyproject.toml  replace_courtroom.py  revert.py  tailwind.config.ts  test_llm.py  test_llm_direct.py  test_tts.py  test_voice.py  test_ws.py
agents/: defender.py  judge.py  prosecutor.py
docs/: backend.md  checkpoint-1-presentation.md  frontend.md  idea-summary.md  implementation-phases.md  project-details-and-architecture.md  project.md
frontend/: package.json  process-alpha.cjs  role_html.txt  smooth-alpha.cjs  vite.config.ts
frontend/src/: index.css  test-black-screen.spec.ts
frontend/src/lib/: api.ts  audio.ts  http.ts  mockApi.ts  sounds.ts  ws.ts
frontend/src/pages/: Index.tsx
frontend/src/store/: index.ts  trialStore.ts
frontend/src/types/: courtroom.ts  speech.d.ts
graph/: builder.py  checkpointer.py  state.py
rag/: perplexity.py  retriever.py  splitter.py  vectorstore.py
src/: index.css
src/components/: ErrorBoundary.tsx
src/lib/: mockApi.ts  sounds.ts
src/pages/: Index.tsx
src/types/: courtroom.ts
testing_court/: integration_details.md  testing_process.md
tests/: test_checkpointer.py  test_db.py  test_defender.py  test_e2e_trial.py  test_embed.py  test_evaluate.py  test_graph.py  test_judge.py  test_judgment.py  test_objection.py  test_perplexity.py  test_prosecutor.py  test_report.py  test_retriever.py  test_splitter.py  test_state.py  test_suggest.py  test_websocket.py
(+26 files in other folders)
