[project]
name = "ai-courtroom-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "langchain>=1.2.14",
    "langchain-astradb>=1.0.0",
    "langchain-core>=1.2.24",
    "langchain-google-genai>=4.2.1",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.4",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.22",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "websockets>=16.0",
]
